# anime_face_generator

./: .gitignore  Makefile  README.md  main_49M_DDPM.ipynb  main_85M_DDPM.ipynb  pyproject.toml
anime_face_generator/: __init__.py  dataset.py  features.py  plots.py
anime_face_generator/modeling/: generate.py  train.py  train2.py  train_ddp.py
anime_face_generator/modeling/models/: 85M_Giga_Unet_edited_DDPM.py  giga_unet_edited_ddpm_85M.py  mega_unet_ddpm_74M.py  mini_unet_ddpm_10M.py  simple_unet_ddpm_49M.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.00-data-EDA.ipynb  0.10-Visualize-samples.ipynb  0.20-GIGA-Visualize-samples.ipynb  0.30-GIGA-MIGA-MINI-Visualize-samples.ipynb  0.S0-GIGA-Visualize-samples.ipynb  00-data-EDA.ipynb  01-VDM-with-MLP.ipynb  01-VDM-with-U-Net.ipynb  1.00-VDM-with-MLP.ipynb  1.00-VDM-with-U-Net.ipynb  1.10-VDM-with-U-Net.ipynb  1.40-VDM-with-Mega-custom-advanced-U-Net.ipynb  1.50-VDM-with-Giga-custom-advanced-U-Net.ipynb  1.60-VDM-Giga-UNet-parallelized-training.ipynb  2.00-VDM-Score-Energy-based.ipynb  2.10-parallel-simple-VDM-Score-Energy-based.ipynb  jupyter.sbatch  main_74M_DDPM.py
reports/: .$Untitled Diagram.drawio.bkp  Untitled Diagram.drawio  bibliography.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  reportNotes.bib
reports/proposal/: project2_proposal.aux  project2_proposal.blg  project2_proposal.fdb_latexmk  project2_proposal.fls  project2_proposal.out  project2_proposal.tex
