[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "anime_face_generator"
version = "0.0.1"
description = "diffusion model to generate anime faces."
authors = [
  { name = "ayoub assaoud" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["anime_face_generator"]
include = ["pyproject.toml", "anime_face_generator/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["anime_face_generator"]
force-sort-within-sections = true

